# time-record-keeper

./: Cargo.toml  README.md
public/styles/: index.css  index.css.map
src/: main.rs  model.rs  util.rs
src/components/: mod.rs  modals.rs  navbar.rs  records.rs
src/styles/: index.scss
src/styles/components/: _modals.scss  _navbar.scss  _records.scss
